backface visibility fix

--- a/cv/style.css
+++ b/cv/style.css
@@ -407,6 +407,8 @@ a:hover {
   box-shadow: 0px 2px 10px 0px rgb(0 0 0 / 10%);
   animation: appearup 0.5s ease-out forwards;
   animation-delay: 3s;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
 @keyframes appearup {
